# qrctrl

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_zh.md  build.rs
.github/workflows/: release.yml
assets/macos/: Info.plist
docs/: architecture-review.md  future.md  research.md  research2.md
examples/: apply_icon_mask.rs  gen_icon.rs
scripts/: build-macos-app.sh  regen-tray-icon.ps1
src/: assets.rs  backend.rs  clipboard.rs  config.rs  file_transfer.rs  inject.rs  main.rs  net.rs  qr.rs  state.rs  token.rs  tray.rs  ws.rs
static/: config.html  index.html
static/css/: base.css  config.css  index.css
static/js/: config.js  index.js
tests/: send_sync_invariants.rs
