[package]
name = "qrctrl"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
enigo = "0.6"
qrcode = "0.14"
rand = "0.9"
local-ip-address = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = { version = "3", default-features = false, features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
