[package]
name = "qrctrl"
version = "0.7.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "fs", "io-util"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
enigo = "0.6"
qrcode = "0.14"
rand = "0.9"
if-addrs = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = { version = "3", default-features = false, features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2"
futures-util = "0.3"
tray-icon = "0.24"
tao = "0.35"
softbuffer = "0.4"
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
